src/test/deca/context/valid/sansObjet/MultiplePrintlnUsageWithFloat.deca

{
    float  x = 2020.5f;
    float y = 2020.5f;
    println("x = ",x,"y= ",y);

}
