src/test/deca/context/invalid/object/badCall3.deca
class A
{
  int y()
  {
    return 7;
  }
}
class X
{
  int a ;
  void m()
  {
    C c = new C();
    B b = new B();
    println(b.x());
  }
}
class B extends A
{

}

class C extends X
{
  int x()
  {
    return 4;
  }
}
